fix add to cart problem.
